package seedu.zettel.commands;

import java.util.ArrayList;
import java.util.List;
import java.util.Optional;

import seedu.zettel.Note;
import seedu.zettel.UI;
import seedu.zettel.exceptions.NoteBodyEmptyException;
import seedu.zettel.exceptions.InvalidNoteIdException;
import seedu.zettel.exceptions.NoNotesException;
import seedu.zettel.exceptions.ZettelException;
import seedu.zettel.storage.Storage;

/**
 * Command to show a note's body by its ID.
 */
public class PrintNoteBodyCommand extends Command {
    private final String noteId;

    /**
     * Constructs a PrintNoteBodyCommand with the specified note ID.
     *
     * @param noteId The 8-character hexadecimal note ID
     */
    public PrintNoteBodyCommand(String noteId) {
        this.noteId = noteId;
    }
    
    /**
     * Executes the command to print the note's body.
     *
     * @param notes   The list of all notes
     * @param tags    The list of current tags.
     * @param ui      The UI instance for user interaction
     * @param storage The storage instance for persistence
     * @throws ZettelException If the note ID is invalid or the note doesn't exist
     */
    @Override
    public void execute(ArrayList<Note> notes, List<String> tags, UI ui, Storage storage) throws ZettelException {
        // Validation 1: Check if the notes list is empty
        if (notes.isEmpty()) {
            throw new NoNotesException("You have no notes to pin/unpin.");
        }

        // Validation 2: Check if note with the given ID exists
        Optional<Note> maybe = notes.stream().filter(n -> n.getId().equals(noteId)).findFirst();
        if (maybe.isEmpty()) {
            throw new InvalidNoteIdException("Note with ID '" + noteId + "' does not exist.");
        }

        Note note = maybe.get();

        // Check if the note body is empty
        if (note.getBody().isEmpty()) {
            throw new NoteBodyEmptyException("The body of note with ID '" + noteId + "' is empty.");
        }
        ui.showNoteBody(noteId, note.getBody());
    }
}
