@startuml NoteManagementCommands
skinparam classAttributeIconSize 0
hide circle
package NoteCommands {
    abstract class Command {
        + {abstract} execute(notes : ArrayList<Note>, tags : List<String>, ui : UI, storage : Storage) : void
        + isExit() : boolean
    }

    class NewNoteCommand
    class EditNoteCommand
    class DeleteNoteCommand
    class ArchiveNoteCommand
    class PrintNoteBodyCommand

    ' Inheritance
    NewNoteCommand --|> Command
    DeleteNoteCommand --|> Command
    EditNoteCommand --|> Command
    ArchiveNoteCommand -up-|> Command
    PrintNoteBodyCommand -up-|> Command
}
@enduml